Fix crash in date entry when data has more than 3 sections

BUG: 509701
FIXED-IN: 5.2.2
(cherry picked from commit 9f19276ffdf54c658bae9c73961f45d12ba5b3a6)