kmymoney/widgets/kmymoneydateedit.cpp
@@ -119,7 +119,7 @@ public:
         int sectionIndex(0);
 
         for (int idx(0); idx < pos; ++idx) {
-            if (isValidDelimiter(text[idx])) {
+            if (isValidDelimiter(text[idx]) && (sectionIndex < (m_sections.size() - 1))) {
                 ++sectionIndex;
             }
         }
@@ -165,8 +165,11 @@ public:
             const auto ch(text.at(idx));
             if (isValidDelimiter(ch)) {
                 ++partIndex;
-            } else if (!m_invalidDelims.contains(ch)) {
+            } else if (!m_invalidDelims.contains(ch) && (partIndex < parts.size())) {
                 parts[partIndex].append(ch);
+            } else {
+                parts.clear();
+                break;
             }
         }
         return parts;
@@ -191,6 +194,10 @@ public:
             return QDate::fromJulianDay(1);
         }
         QVector<QString> parts(editParts());
+        if (parts.isEmpty()) {
+            return {};
+        }
+
         const auto dayIndex = partBySection(QDateTimeEdit::DaySection);
         const auto monthIndex = partBySection(QDateTimeEdit::MonthSection);
         const auto yearIndex = partBySection(QDateTimeEdit::YearSection);
